# Copyright 2019 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Override for angle_root
angle_root = "//third_party/angle"

# True if ANGLE can access build/, testing/ and other Chrome folders.
angle_has_build = true

# Overrides for ANGLE's dependencies
angle_glslang_dir = "//third_party/glslang/src"
angle_googletest_dir = "//third_party/googletest/src"
angle_jsoncpp_dir = "//third_party/jsoncpp"
angle_libpng_dir = "//third_party/libpng"
angle_spirv_cross_dir = "//third_party/spirv-cross/spirv-cross"
angle_spirv_tools_dir = "//third_party/SPIRV-Tools/src"
