# Copyright 2019 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Override for angle_root
angle_root = "//third_party/angle"

# True if ANGLE can access build/, testing/ and other Chrome folders.
angle_has_build = true

# Overrides for ANGLE's dependencies
angle_glslang_dir = "//third_party/glslang/src"
angle_googletest_dir = "//third_party/googletest/src"
angle_jsoncpp_dir = "//third_party/jsoncpp"
angle_libjpeg_turbo_dir = "//third_party/libjpeg_turbo"
angle_libpng_dir = "//third_party/libpng"
angle_spirv_headers_dir = "//third_party/spirv-headers/src"
angle_spirv_tools_dir = "//third_party/spirv-tools/src"
angle_vulkan_memory_allocator_dir = "//third_party/vulkan_memory_allocator"
angle_wayland_dir = "//third_party/wayland/src"
