# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# The paths to Dawn's dependencies
dawn_glfw_dir = "//third_party/glfw/src"
dawn_googletest_dir = "//third_party/googletest/src"
dawn_jinja2_dir = "//third_party/jinja2"
dawn_jsoncpp_dir = "//third_party/jsoncpp"
dawn_spirv_tools_dir = "//third_party/vulkan-deps/spirv-tools/src"
dawn_swiftshader_dir = "//third_party/swiftshader"
dawn_vulkan_loader_dir = "//third_party/vulkan-deps/vulkan-loader/src"
dawn_vulkan_validation_layers_dir =
    "//third_party/vulkan-deps/vulkan-validation-layers/src"
