# Copyright 2018 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# The paths to Dawn's dependencies
dawn_angle_dir = "//third_party/angle"
dawn_glfw_dir = "//third_party/dawn/third_party/glfw"
dawn_googletest_dir = "//third_party/googletest/src"
dawn_partition_alloc_dir = "//base/allocator/partition_allocator"
dawn_jinja2_dir = "//third_party/jinja2"
dawn_jsoncpp_dir = "//third_party/jsoncpp"
dawn_spirv_tools_dir = "//third_party/spirv-tools/src"
dawn_swiftshader_dir = "//third_party/swiftshader"
dawn_vulkan_headers_dir = "//third_party/vulkan-headers/src"
dawn_vulkan_loader_dir = "//third_party/vulkan-loader/src"
dawn_vulkan_utility_libraries_dir = "//third_party/vulkan-utility-libraries/src"
dawn_vulkan_validation_layers_dir = "//third_party/vulkan-validation-layers/src"
dawn_dxc_dir = "//third_party/dawn/third_party/dxc"
dawn_dxheaders_dir = "//third_party/dawn/third_party/dxheaders"

dawn_version_file = "//gpu/webgpu/DAWN_VERSION"
