# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Enable use of Javascript in PDFs.
pdf_enable_v8_override = true

# Enable XFA forms in Chromium builds on a per-platform basis
pdf_enable_xfa_override = is_chromeos || is_linux || is_mac || is_win

# Build PDFium either using the bundled FreeType, or using a third-party
# FreeType, configured by the embedder in //build/config/freetype.
pdf_bundle_freetype_override = false

# Disable use of Skia backend.
pdf_use_skia_override = false

# Disable use of Skia backend, paths only (experimental)
pdf_use_skia_paths_override = false

# Enable experimental win32 GDI APIs.
pdf_use_win32_gdi_override = true
