# Copyright 2016 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//base/allocator/partition_allocator/partition_alloc.gni")

# Enable use of Javascript in PDFs.
pdf_enable_v8_override = true

# Enable XFA forms in Chromium builds on a per-platform basis
pdf_enable_xfa_override = is_chromeos || is_linux || is_mac || is_win

# Build PDFium either using the bundled FreeType, or using a third-party
# FreeType, configured by the embedder in //build/config/freetype.
pdf_bundle_freetype_override = false

# Build PDFium with PartitionAlloc support and direct the fxcrt layer to
# use it as the memory allocator instead of `malloc()`.
pdf_use_partition_alloc_override = use_partition_alloc

# Allow to use Skia backend at run time.
pdf_use_skia_override = true

# Disallow PDFium Fontations support.
# TODO(crbug.com/pdfium/2107): Enable this.
pdf_enable_fontations_override = false
