# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

shaderc_glslang_dir = "//third_party/vulkan-deps/glslang/src"
shaderc_spirv_cross_dir = "//third_party/vulkan-deps/spirv-cross/src"
shaderc_spirv_headers_dir = "//third_party/vulkan-deps/spirv-headers/src"
shaderc_spirv_tools_dir = "//third_party/vulkan-deps/spirv-tools/src"

shaderc_enable_spvc_parser = false
