# Copyright 2018 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

shaderc_glslang_dir = "//third_party/glslang/src"
shaderc_spirv_tools_dir = "//third_party/SPIRV-Tools/src"
shaderc_spirv_cross_dir = "//third_party/spirv-cross/spirv-cross"
shaderc_spirv_headers_dir = "//third_party/spirv-headers/src"

shaderc_enable_spvc_parser = false
