# Copyright 2018 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# We are building inside Chromium
spirv_tools_standalone = false

# Paths to SPIRV-Tools dependencies in Chromium
spirv_tools_googletest_dir = "//third_party/googletest/src"
spirv_tools_spirv_headers_dir = "//third_party/spirv-headers/src"
