# Copyright 2019 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# We are building SwiftShader in Chromium
swiftshader_standalone = false

# Path to SwiftShader
swiftshader_dir = "//third_party/swiftshader"

# Paths to SwiftShader dependencies
swiftshader_spirv_tools_dir = "//third_party/SPIRV-Tools/src"
