# Copyright 2020 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//skia/features.gni")

tint_root_dir = "//third_party/dawn"
tint_spirv_tools_dir = "//third_party/spirv-tools/src"
tint_googletest_dir = "//third_party/googletest/src"
tint_spirv_headers_dir = "//third_party/spirv-headers/src"

tint_build_spv_reader = false
tint_build_spv_writer = true
tint_build_wgsl_reader = true
tint_build_wgsl_writer = true
