# Copyright 2019 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//third_party/angle/gni/angle.gni")

vulkan_headers_dir = "//third_party/vulkan-headers/src"

vulkan_data_subdir = angle_data_dir
vulkan_gen_subdir = "angle/vulkan"
