# Copyright 2019 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/ozone.gni")

vulkan_use_x11 = ozone_platform_x11

if (ozone_platform_wayland) {
  vulkan_use_wayland = true

  import("//third_party/wayland/features.gni")
  if (!use_system_libwayland) {
    wayland_dir = "//third_party/wayland"
    vulkan_wayland_include_dirs = [
      "$wayland_dir/src/src",
      "$wayland_dir/include/src",
      "$wayland_dir/include/protocol",
    ]
  }
}
