# Copyright 2019 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/ozone.gni")
import("//build_overrides/wayland.gni")

vulkan_use_x11 = ozone_platform_x11
vulkan_use_wayland = ozone_platform_wayland

if (vulkan_use_wayland && !use_system_libwayland) {
  vulkan_wayland_include_dirs = [
    "$wayland_gn_dir/src/src",
    "$wayland_gn_dir/include/src",
  ]
}
