# Copyright 2019 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build_overrides/vulkan_common.gni")

vulkan_utility_libraries_dir = "//third_party/vulkan-utility-libraries/src"
vvl_spirv_headers_dir = "//third_party/spirv-headers/src"
vvl_spirv_tools_dir = "//third_party/spirv-tools/src"
vvl_glslang_dir = "//third_party/glslang/src"
