# Copyright 2022 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/ozone.gni")

wayland_gn_dir = "//third_party/wayland"

if (ozone_platform_wayland) {
  # This defines use_system_libwayland
  import("$wayland_gn_dir/features.gni")
} else {
  use_system_libwayland = false
}

# Path to Wayland sources
wayland_dir = "$wayland_gn_dir/src"
